--- a/chunk_includes/practice2.html
+++ b/chunk_includes/practice2.html
@@ -5,11 +5,11 @@
 </p>
 
 <p>
-The last word of the sentence fragment will be a differnt color than the others. The beginning of the sentence will be in a white font, and the final word will be green. When you see the green word, you will make your response. You should make your judgments with both hands on the keyboard. Always make sure to have them ready to respond while the sentence is being displayed.
+The last word of the sentence fragment will be a different color than the others. The beginning of the sentence will be in a white font, and the final word will be green. When you see the green word, you will make your response. You should make your judgments with both hands on the keyboard. Always make sure to have them ready to respond while the sentence is being displayed.
 </p>
 
 <p>
-VERY IMPORTANT: We would like you to respond with your gut instinct about the sentence fragment. So don't overthink your response! DO NOT REPEAT THE SENTENCE AGAIN IN YOUR HEAD before responding. Just do the best you can using your gut reaction from your first shot reading the sentence.
+VERY IMPORTANT: We would like you to respond with your gut instinct about the sentence fragment. So don't over think your response! DO NOT REPEAT THE SENTENCE AGAIN IN YOUR HEAD before responding. Just do the best you can using your gut reaction from your first shot reading the sentence.
 </p>
 <p>
 After you make your judgment, the green word will disappear from the screen. Then, you'll see the fixation cross again, and the next sentence will begin. 
