--- a/chunk_includes/practice3.html
+++ b/chunk_includes/practice3.html
@@ -6,7 +6,7 @@
 
 
 <p>
-The goal is to judge whether you thought the sentence was "ungrammatical". To respond "yes, that sentence fragment was ungrammatical", press the 'F' key with your left pointer finger; to respond "no, that sentence fragment was grammatical", press the 'J' key with your right pointer finger.
+The goal is to judge whether the sentence was "ungrammatical". To respond "yes, that sentence fragment was ungrammatical", press the 'F' key with your left pointer finger; to respond "no, that sentence fragment was grammatical", press the 'J' key with your right pointer finger.
 </p>
 
 
